series swagger docs 분류
